--- a/chart/blog/values.yaml
+++ b/chart/blog/values.yaml
@@ -12,7 +12,7 @@ service:
   externalPort: 80
   internalPort: 80
 ingress:
-  enabled: false
+  enabled: true
   # Used to create Ingress record (should used with service.type: ClusterIP).
   hosts:
     - blog.kube.camp
