--- a/chart/blog/values.yaml
+++ b/chart/blog/values.yaml
@@ -17,13 +17,13 @@ ingress:
   hosts:
     - blog.kube.camp
   annotations:
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
   tls:
-    # Secrets must be manually created in the namespace.
-    # - secretName: chart-example-tls
-    #   hosts:
-    #     - chart-example.local
+    Secrets must be manually created in the namespace.
+    - secretName: tls-bundle-blog
+      hosts:
+        - blog.kube.camp
 resources:
   limits:
     cpu: 100m
