--- a/chart/blog/values.yaml
+++ b/chart/blog/values.yaml
@@ -18,7 +18,7 @@ ingress:
     - blog.kube.camp
   annotations:
     kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
+    ingress.kubernetes.io/ssl-redirect: "true"
   tls:
     # Secrets must be manually created in the namespace.
     - secretName: tls-bundle-blog
