--- a/chart/blog/values.yaml
+++ b/chart/blog/values.yaml
@@ -14,16 +14,11 @@ service:
 ingress:
   enabled: true
   # Used to create Ingress record (should used with service.type: ClusterIP).
-  hosts:
-    - blog.kube.camp
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    ingress.kubernetes.io/ssl-redirect: "true"
-  tls:
-    # Secrets must be manually created in the namespace.
-    - secretName: tls-bundle-blog
-      hosts:
-        - blog.kube.camp
+  host: blog.kube.camp
+  path: "/"
+  ssl:
+    enabled: true
+  
 resources:
   limits:
     cpu: 100m
@@ -31,4 +26,8 @@ resources:
   requests:
     cpu: 100m
     memory: 128Mi
+
+tls:
+  cert: xxx
+  key: xxx
 
