--- a/.drone.yml
+++ b/.drone.yml
@@ -22,14 +22,14 @@ pipeline:
     debug: true
     secrets: [ docker_username, docker_password ]
 
-  helm_deploy_production:
+  helm_deploy:
     image: quay.io/ipedrazas/drone-helm:master-20c098e
     skip_tls_verify: true
     chart: ./chart/blog
     release: ${DRONE_BRANCH}-blog
     values: image.tag=${DRONE_BRANCH}-${DRONE_COMMIT_SHA:0:7},tls.crt=${TLS_CRT},tls.key=${TLS_KEY}
     prefix: PROD
-    secrets: [ prod_api_server, prod_kubernetes_token, tls_crt, tls_key ]
+    secrets: [ prod_api_server, prod_kubernetes_token, prod_tls_crt, prod_tls_key ]
     when:
       branch: [master]
 
