--- a/chart/blog/templates/ingress.yaml
+++ b/chart/blog/templates/ingress.yaml
@@ -22,6 +22,6 @@ spec:
       - path: '{{ .Values.ingress.path }}'
         backend:
           serviceName: '{{ template "fullname" . }}'
-          servicePort: {{ .Values.service.http.externalPort }}
+          servicePort: {{ .Values.service.externalPort }}
 
 {{- end }}
