--- a/chart/blog/templates/ssl-secret.yaml
+++ b/chart/blog/templates/ssl-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ingress.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -9,7 +10,6 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: kubernetes.io/tls
 data:
-  tls.crt: {{ .Values.tls.crt | b64enc }}
+  tls.crt: {{ .Values.tls.cert | b64enc }}
   tls.key: {{ .Values.tls.key | b64enc }}
-
-
+{{- end }}
