--- a/chart/blog/values.yaml
+++ b/chart/blog/values.yaml
@@ -11,6 +11,10 @@ service:
   type: ClusterIP
   externalPort: 80
   internalPort: 80
+  ssl:
+    name: cloudflare
+    externalPort: 443
+    internalPort: 80
 ingress:
   enabled: true
   # Used to create Ingress record (should used with service.type: ClusterIP).
