--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,7 @@ pipeline:
       - curl -L -o /tmp/hugo.tar.gz https://github.com/gohugoio/hugo/releases/download/v0.27.1/hugo_0.27.1_Linux-64bit.tar.gz
       - tar xvf /tmp/hugo.tar.gz -C /tmp/
       - mv /tmp/hugo /usr/bin/hugo
-      - hugo -b http://blog.kube.camp/  
+      - hugo -b //blog.kube.camp/  
   
   docker-build:
     environment:
