fix chart base64 enc

--- a/chart/blog/templates/ssl-secret.yaml
+++ b/chart/blog/templates/ssl-secret.yaml
@@ -10,6 +10,6 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: kubernetes.io/tls
 data:
-  tls.crt: {{ .Values.tls.cert | b64enc }}
-  tls.key: {{ .Values.tls.key | b64enc }}
+  tls.crt: {{ .Values.tls.cert }}
+  tls.key: {{ .Values.tls.key }}
 {{- end }}
